name:           MSPweb
version:        0.2.0.0
synopsis:       Generator for the MSP website
homepage:       https://github.com/msp-strath/MSPweb
author:         Bob Atkey, Fredrik Nordvall Forsberg
maintainer:     fredrik.nordvall-forsberg@strath.ac.uk
build-type:     Simple
cabal-version:  >= 1.10

executable Generate
  main-is:          Generate.hs
  build-depends:    base,
                    filepath,
                    directory,
                    pandoc >= 2.0,
                    text
  default-language: Haskell2010

executable Generate101
  main-is:          Generate101.hs
  other-modules:    OneOhOne
  build-depends:    base,
                    containers,
                    directory,
                    time,
                    regex-pcre-builtin,
                    array,
                    aeson,
                    bytestring,
                    text,
                    xml-types,
                    http-client,
                    http-client-tls,
                    http-types,
                    feed
  default-language: Haskell2010

executable GeneratePeople
  main-is:          GeneratePeople.hs
  other-modules:    Html
  build-depends:    base,
                    yaml,
                    bytestring
  default-language: Haskell2010

executable GenerateNews
  main-is:          GenerateNews.hs
  other-modules:    Html
  build-depends:    base,
                    yaml,
                    bytestring,
                    http-client,
                    http-client-tls,
                    http-types,
                    time,
                    feed,
                    text
  default-language: Haskell2010
