name:           MSPweb
version:        0.3.0.0
synopsis:       Generator for the MSP website
homepage:       https://github.com/msp-strath/MSPweb
author:         Bob Atkey, Fredrik Nordvall Forsberg
maintainer:     fredrik.nordvall-forsberg@strath.ac.uk
build-type:     Simple
cabal-version:  >= 1.10

executable Generate
  main-is:          Generate.hs
  other-modules:    Markdown
  build-depends:    base,
                    filepath,
                    directory,
                    pandoc >= 2.0,
                    text
  default-language: Haskell2010

executable Generate101
  main-is:          Generate101.hs
  other-modules:    OneOhOne,
                    People,
                    Html,
                    Markdown
  build-depends:    base,
                    containers,
                    directory,
                    time,
                    regex-pcre-builtin,
                    array,
                    bytestring,
                    text,
                    xml-types,
                    http-client,
                    http-client-tls,
                    http-types,
                    pandoc >= 2.0,
                    yaml,
                    filepath,
                    directory,
                    feed
  default-language: Haskell2010

executable GeneratePeople
  main-is:          GeneratePeople.hs
  other-modules:    People,
                    Html,
                    Markdown
  build-depends:    base,
                    yaml,
                    bytestring,
                    text,
                    directory,
                    filepath,
                    pandoc >= 2.0
  default-language: Haskell2010

executable GenerateNews
  main-is:          GenerateNews.hs
  other-modules:    Html
  build-depends:    base,
                    crypton-connection,
                    crypton-x509-system,
                    data-default,
                    yaml,
                    bytestring,
                    http-client,
                    http-client-tls,
                    http-types,
                    time,
                    tls,
                    feed,
                    text
  default-language: Haskell2010
